# reasonit

./: .env.example  .gitignore  Architechture.md  CLAUDE.md  DeepResearch.md  Makefile  README.md  SELF_PROVING_SUMMARY.md  api_server.py  cli.py  cost_tracking.json  demo_self_proving.py  final_demo.py  integration_test.py  pyproject.toml  reasonit.py  run_benchmarks.py  session_manager.py  setup.py  simple_benchmark.py  test_agent_creation.py  test_cot_agent.py  test_foundation.py  test_llm.py  test_mcts_agent.py  test_meta_reasoning.py  test_reflexion_memory.py  test_self_ask_agent.py  test_self_proving_module.py  test_tot_agent.py  test_wikipedia_system.py
.claude/: settings.local.json
PRPs/: comprehensive-system-improvements.md  llm-reasoning-architecture.md
agents/: __init__.py  base_agent.py  cot_agent.py  mcts_agent.py  reflexion_agent.py  self_ask_agent.py  tot_agent.py
benchmarks/: __init__.py  base_benchmark.py  gsm8k_eval.py  humaneval_eval.py  mmlu_eval.py  performance_comparison.py  run_all_benchmarks.py
cli/: __init__.py
context/: __init__.py  context_generator.py  prompt_templates.py
controllers/: __init__.py  adaptive_controller.py  coaching_system.py  confidence_monitor.py  constitutional_review.py  cost_manager.py
examples/: api_usage.py  basic_usage.py  benchmark_usage.py
knowledge/: __init__.py  guidance_injector.py  meta_reasoning_kb.py  pattern_classifier.py  strategy_templates.py
knowledge_data/: feedback_history.json  kb_stats.json
models/: __init__.py  base_model.py  exceptions.py  openai_wrapper.py  types.py
planning/: __init__.py  checkpoint_manager.py  fallback_graph.py  task_planner.py
proofs/: __init__.py  certificate_generator.py  formal_verifier.py  proof_generator.py
reflection/: __init__.py  memory_system.py
tests/: test_coaching_system.py  test_confidence_monitor.py  test_constitutional_review.py  test_cost_manager.py  test_planning.py
tools/: __init__.py  base_tool.py  calculator.py  python_executor.py  search_tool.py  verifier.py
tools/wikipedia/: __init__.py  content_synthesizer.py  entity_recognizer.py  knowledge_detector.py  wikipedia_cache.py  wikipedia_search.py
visualization/: __init__.py  live_display.py  reasoning_charts.py  tree_renderer.py
